build: add variational form code to build system
fix: add mpi to depends

fix: proper path to forall header

--- a/src/serac/physics/utilities/CMakeLists.txt
+++ b/src/serac/physics/utilities/CMakeLists.txt
@@ -4,6 +4,8 @@
 #
 # SPDX-License-Identifier: (BSD-3-Clause)
 
+add_subdirectory(variational_form)
+
 set(physics_utilities_headers
     boundary_condition.hpp
     boundary_condition_manager.hpp
