minor refactor of finite_element class to facilitate abstacting over different spaces

--- a/src/serac/physics/utilities/variational_form/CMakeLists.txt
+++ b/src/serac/physics/utilities/variational_form/CMakeLists.txt
@@ -12,6 +12,7 @@ set(parvariationalform_headers
     genericintegrator.hpp
     tensor.hpp
     qfuncintegrator.hpp
+    weak_form.hpp
     )
 
 set(parvariationalform_sources
@@ -58,6 +59,7 @@ endforeach()
 set(parvariationalform_mpi_tests
     hcurl_comparison.cpp
     thermal_comparison.cpp
+    #thermal_comparison_weak_form.cpp
     elasticity_comparison.cpp)
     
 foreach(filename ${parvariationalform_mpi_tests})
