tpl: Adding zlib to the system level packages for Ubuntu 20.04

--- a/scripts/spack/configs/linux_ubuntu_20/packages.yaml
+++ b/scripts/spack/configs/linux_ubuntu_20/packages.yaml
@@ -66,6 +66,11 @@ packages:
     externals:
     - spec: openblas
       prefix: /usr/lib/x86_64-linux-gnu/
+  zlib:
+    buildable: false
+    externals:
+    - spec: zlib
+      prefix: /usr
 
   # Lock in versions of Devtools
   cmake:
