refactor: Move the stress and kinematics utilities to a separate file

--- a/src/serac/physics/materials/CMakeLists.txt
+++ b/src/serac/physics/materials/CMakeLists.txt
@@ -15,6 +15,7 @@ set(materials_headers
 set(materials_depends
     serac_infrastructure
     serac_numerics
+    serac_physics_utilities
     )
 
 blt_add_library(
