added first pass at sets for better handling attributes

--- a/scripts/spack/configs/linux_ubuntu_20/packages.yaml
+++ b/scripts/spack/configs/linux_ubuntu_20/packages.yaml
@@ -52,6 +52,11 @@ packages:
     externals:
     - spec: libx11
       prefix: /usr
+  netcdf-c:
+    buildable: false
+    externals:
+    - spec: netcdf-c
+      prefix: /usr
   autoconf:
     buildable: false
     externals:
