feat: add skeleton of examples

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -17,3 +17,6 @@ install(
     DESTINATION
         examples/using-with-cmake
 )
+
+# Add the simple conduction examples
+add_subdirectory(simple_conduction)
