adding some files for L2 space

--- a/src/serac/physics/utilities/variational_form/CMakeLists.txt
+++ b/src/serac/physics/utilities/variational_form/CMakeLists.txt
@@ -57,6 +57,7 @@ endforeach()
 
 # Then add the examples/tests
 set(parvariationalform_mpi_tests
+    l2_comparison.cpp
     hcurl_comparison.cpp
     thermal_comparison.cpp
     thermal_comparison_weak_form.cpp
