Update system packages

--- a/scripts/spack/devtools_configs/blueos_3_ppc64le_ib_p9/packages.yaml
+++ b/scripts/spack/devtools_configs/blueos_3_ppc64le_ib_p9/packages.yaml
@@ -22,14 +22,8 @@ packages:
       mpi: [spectrum-mpi]
   cuda:
     buildable: false
-
-  # LLNL blueos mpi
   mpi:
     buildable: false
-  spectrum-mpi:
-    externals:
-      - spec: spectrum-mpi@release%clang@upstream_gfortran
-        prefix: /usr/tce/packages/spectrum-mpi/spectrum-mpi-rolling-release-gcc-8.3.1
 
   # blas is a bit more complicated because its a virtual package so fake it with
   # the following per spack docs
@@ -50,15 +44,45 @@ packages:
     externals:
     - spec: automake
       prefix: /usr
+  binutils:
+    buildable: false
+    externals:
+    - spec: binutils
+      prefix: /usr
   bzip2:
     buildable: false
     externals:
     - spec: bzip2
       prefix: /usr
+  diffutils:
+    buildable: false
+    externals:
+    - spec: diffutils
+      prefix: /usr
+  epoxy:
+    buildable: false
+    externals:
+    - spec: epoxy
+      prefix: /usr
+  findutils:
+    buildable: false
+    externals:
+    - spec: findutils
+      prefix: /usr
   gettext:
     buildable: false
     externals:
     - spec: gettext
+      prefix: /usr
+  ghostscript:
+    buildable: false
+    externals:
+    - spec: ghostscript
+      prefix: /usr
+  groff:
+    buildable: false
+    externals:
+    - spec: groff
       prefix: /usr
   libtool:
     buildable: false
@@ -79,6 +103,11 @@ packages:
     buildable: false
     externals:
     - spec: pkg-config
+      prefix: /usr
+  readline:
+    buildable: false
+    externals:
+    - spec: readline
       prefix: /usr
   tar:
     buildable: false
