adding multiple dofs/node support to main kernel

--- a/src/serac/physics/utilities/variational_form/CMakeLists.txt
+++ b/src/serac/physics/utilities/variational_form/CMakeLists.txt
@@ -61,7 +61,8 @@ set(parvariationalform_mpi_tests
     hcurl_comparison.cpp
     thermal_comparison.cpp
     thermal_comparison_weak_form.cpp
-    elasticity_comparison.cpp)
+    elasticity_comparison.cpp
+    elasticity_comparison_weak_form.cpp)
     
 foreach(filename ${parvariationalform_mpi_tests})
     get_filename_component(test_name ${filename} NAME_WE)
