--- a/.uberenv_config.json
+++ b/.uberenv_config.json
@@ -5,7 +5,8 @@
 "package_source_dir" : "../..",
 "force_commandline_prefix" : false,
 "spack_url": "https://github.com/spack/spack",
-"spack_commit": "e53595c0dcab66c869856fa7f5ea42d9bf7c7305",
+"spack_branch": "bugfix/disjoint_variant_defaults",
+"spack_commit": "7c2d4917278d21c2940c736b501903b84dabd864",
 "spack_configs_path": "scripts/spack/configs",
 "spack_packages_path": "scripts/spack/packages",
 "spack_activate" : {}
