abstact test/trial evaluation stages, hcurl works

--- a/src/serac/physics/utilities/variational_form/CMakeLists.txt
+++ b/src/serac/physics/utilities/variational_form/CMakeLists.txt
@@ -59,6 +59,7 @@ endforeach()
 set(parvariationalform_mpi_tests
     l2_comparison.cpp
     hcurl_comparison.cpp
+    hcurl_comparison_weak_form.cpp
     thermal_comparison.cpp
     thermal_comparison_weak_form.cpp
     elasticity_comparison.cpp
