tpls: update quartz host-configs, minor fixes to build with caliper, automated clingo install

--- a/scripts/spack/devtools_configs/toss_3_x86_64_ib/packages.yaml
+++ b/scripts/spack/devtools_configs/toss_3_x86_64_ib/packages.yaml
@@ -128,7 +128,7 @@ packages:
   unzip:
     buildable: false
     externals:
-    - spec: unzip
+    - spec: unzip@6.0
       prefix: /usr
   zlib:
     buildable: false
