tpls: update packages.yaml for docker to include complete specs

--- a/scripts/spack/configs/docker/ubuntu18/packages.yaml
+++ b/scripts/spack/configs/docker/ubuntu18/packages.yaml
@@ -51,47 +51,47 @@ packages:
   autotools:
     buildable: false
     externals:
-    - spec: autotools
+    - spec: autotools@2.69
       prefix: /usr
   bzip2:
     buildable: false
     externals:
-    - spec: bzip2
+    - spec: bzip2@1.0.6
       prefix: /usr
   gettext:
     buildable: false
     externals:
-    - spec: gettext
+    - spec: gettext@0.19.8.1
       prefix: /usr
   m4:
     buildable: false
     externals:
-    - spec: m4
+    - spec: m4@1.4.18
       prefix: /usr
   perl:
     buildable: false
     externals:
-    - spec: perl
+    - spec: perl@5.26.1
       prefix: /usr
   pkg-config:
     buildable: false
     externals:
-    - spec: pkg-config
+    - spec: pkg-config@0.29.1
       prefix: /usr
   tar:
     buildable: false
     externals:
-    - spec: tar
+    - spec: tar@1.29
       prefix: /usr
   graphviz:
     buildable: false
     externals:
-    - spec: graphviz
+    - spec: graphviz@2.40.1
       prefix: /usr
   openblas:
     buildable: false
     externals:
-    - spec: openblas
+    - spec: openblas@0.2.20
       prefix: /usr
 
   # Globally lock in version of CMake
@@ -105,5 +105,5 @@ packages:
     version: [10.0.0]
     buildable: false
     externals:
-    - spec: llvm+clang
+    - spec: llvm@10.0.0+clang
       prefix: /usr
