--- a/scripts/docker/dockerfile.in
+++ b/scripts/docker/dockerfile.in
@@ -7,6 +7,7 @@ RUN sudo apt-get update -y
 RUN sudo apt-get install curl ssh pkg-config build-essential libopenblas-dev mpich lcov xsltproc python3 -fy
 RUN sudo apt-get -qq install -y --no-install-recommends gfortran-7 && sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-7 100
 RUN sudo ln -f -s python3 /usr/bin/python # Compatibility with legacy Python
+RUN sudo python3 -m pip install -i https://test.pypi.org/simple/ clingo-cffi
 
 # Avoid building CMake from scratch
 RUN wget https://cmake.org/files/v3.18/cmake-3.18.5-Linux-x86_64.sh
