--- a/scripts/spack/configs/toss_3_x86_64_ib/packages.yaml
+++ b/scripts/spack/configs/toss_3_x86_64_ib/packages.yaml
@@ -26,9 +26,10 @@ packages:
     buildable: false
   mvapich2:
     externals:
-    - spec: mvapich2@2.3%clang@10.0.0 process_managers=slurm arch=linux-rhel7-ivybridge
+    # FIXME: add 'process_managers=slurm' to these specs pending spack#21911
+    - spec: mvapich2@2.3%clang@10.0.0 arch=linux-rhel7-ivybridge
       prefix: /usr/tce/packages/mvapich2/mvapich2-2.3-clang-10.0.0
-    - spec: mvapich2@2.3%gcc@8.3.1 process_managers=slurm arch=linux-rhel7-ivybridge
+    - spec: mvapich2@2.3%gcc@8.3.1 arch=linux-rhel7-ivybridge
       prefix: /usr/tce/packages/mvapich2/mvapich2-2.3-gcc-8.3.1
 
   # blas is a bit more complicated because its a virtual package so fake it with
@@ -62,19 +63,19 @@ packages:
       prefix: /usr
   graphviz:
     buildable: false
-    # externals:
-    # - spec: graphviz
-    #   prefix: /usr
+    externals:
+    - spec: graphviz@2.30.1
+      prefix: /usr
   libtool:
     buildable: false
-    # externals:
-    # - spec: libtool
-    #   prefix: /usr
+    externals:
+    - spec: libtool@2.4.2
+      prefix: /usr
   libx11:
     buildable: false
-    # externals:
-    # - spec: libx11
-    #   prefix: /usr
+    externals:
+    - spec: libx11@1.20.4
+      prefix: /usr
   m4:
     buildable: false
     externals:
