debugging issue w/ mfem::Mesh::GetGeometricFactors

--- a/src/serac/physics/utilities/variational_form/CMakeLists.txt
+++ b/src/serac/physics/utilities/variational_form/CMakeLists.txt
@@ -55,6 +55,8 @@ endforeach()
 
 # Then add the examples/tests
 set(weakform_tests_mpi
+    tests/integration_rule_problem.cpp
+    tests/weak_form_comparisons.cpp
     tests/hcurl_comparison_weak_form.cpp
     tests/thermal_comparison_weak_form.cpp
     tests/elasticity_comparison_weak_form.cpp)
