--- a/.gitlab/build_quartz.yml
+++ b/.gitlab/build_quartz.yml
@@ -7,7 +7,7 @@
   rules:
     - if: '$CI_COMMIT_BRANCH =~ /_qnone/ || $ON_QUARTZ == "OFF"' #run except if ...
       when: never
-    - if: '$CI_JOB_NAME =~ /release_resources/'
+    - if: '$CI_JOB_NAME =~ /release_resources_build_quartz/'
       when: always
     - when: on_success
 
