--- a/tests/integration/ats.sh.in
+++ b/tests/integration/ats.sh.in
@@ -1,5 +1,11 @@
 #!/bin/bash
 
+########################
+## Test Invocations
+#
+# TOSS3: salloc -N2 ats.sh
+
+# Variables used inside of the base test.ats
 export ATS_SERAC_BIN_DIR=@SERAC_BIN_DIR@/bin
 export ATS_SERAC_REPO_DIR=@SERAC_REPO_DIR@
 
@@ -9,10 +15,13 @@ export PATH=@ATS_DIR@/bin:$ATS_SERAC_BIN_DIR:$PATH
 #export MACHINE_TYPE=slurm36
 
 echo "~~~~~~~~~~~~~~~~~~~~~~~~~~"
-echo "ATS:" `which ats`
-echo "BIN DIR: " $ATS_SERAC_BIN_DIR
+echo "ATS:      " `which ats`
+echo "BIN DIR:  " $ATS_SERAC_BIN_DIR
 echo "REPO DIR: " @SERAC_REPO_DIR@
 echo "~~~~~~~~~~~~~~~~~~~~~~~~~~"
 
+# Clean-up old run's logs
 rm -rf $SYS_TYPE.*
+
+# Run ATS
 ats @SERAC_REPO_DIR@/tests/integration/test.ats
