--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "scripts/uberenv"]
 	path = scripts/uberenv
 	url = https://github.com/LLNL/uberenv.git
+[submodule "axom"]
+	path = axom
+	url = git@github.com:LLNL/axom.git
