--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/LLNL/uberenv.git
 [submodule "axom"]
 	path = axom
-	url = git@github.com:LLNL/axom.git
+	url = https://github.com/LLNL/axom.git
 [submodule "mfem"]
 	path = mfem
-	url = git@github.com:mfem/mfem.git
+	url = https://github.com/mfem/mfem.git
