--- a/scripts/spack/configs/toss_3_x86_64_ib/packages.yaml
+++ b/scripts/spack/configs/toss_3_x86_64_ib/packages.yaml
@@ -26,10 +26,9 @@ packages:
     buildable: false
   mvapich2:
     externals:
-    # FIXME: add 'process_managers=slurm' to these specs pending spack#21911
-    - spec: mvapich2@2.3%clang@10.0.0 arch=linux-rhel7-ivybridge
+    - spec: mvapich2@2.3%clang@10.0.0 arch=linux-rhel7-ivybridge process_managers=slurm
       prefix: /usr/tce/packages/mvapich2/mvapich2-2.3-clang-10.0.0
-    - spec: mvapich2@2.3%gcc@8.3.1 arch=linux-rhel7-ivybridge
+    - spec: mvapich2@2.3%gcc@8.3.1 arch=linux-rhel7-ivybridge process_managers=slurm
       prefix: /usr/tce/packages/mvapich2/mvapich2-2.3-gcc-8.3.1
 
   # blas is a bit more complicated because its a virtual package so fake it with
